CSS styles: fix overflow.

--- a/src/components/Pizzerias/pizzerias.css
+++ b/src/components/Pizzerias/pizzerias.css
@@ -3,6 +3,10 @@
     border-color: rgb(255, 60, 0);
 }
 
+.user__container * {
+    overflow: hidden;
+}
+
 .pizzerias__list__item {
     font-size: 1.3rem;
     letter-spacing: 0.1rem;
